# eoq-group-continue

./: README.md  package-lock.json  package.json  todo.txt  vite.config.js
WindowsSite/: index.html  script.js  styles.css
api/: app.py  pyproject.toml
backend/: main.py  pyproject.toml
public/: CommandLine.jsx  ContextMenu.jsx  Desktop.jsx  DesktopApp.jsx  FileExplorer.jsx  LoginScreen.jsx  Taskbar.jsx  UpdateScreen.jsx  asci.js  preprompt.js  secondCommandline.jsx
src/: App.css  App.jsx  index.css
