[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["talperets <tal.perets3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
